# Data-RAG-Test

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
agents/: faq_agent.py
chains/: faq_vector_db_chain.py
data/: load_data.py
models/: faq_rag_query.py
test/: comparison test.ipynb  correctness_test.ipynb  test_open_ai_key.py
