[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "fastapi==0.109.0",
    "langchain==0.1.0",
    "langchain-openai==0.0.2",
    "langchainhub==0.1.14",
    "numpy==1.26.2",
    "openai==1.7.2",
    "chromadb==0.4.22",
    "pydantic==2.5.1",
    "uvicorn==0.25.0",
    "pandas~=2.2.1",
    "langchain-community"
]

[project.optional-dependencies]
dev = ["black", "flake8"]